# Stellaron

./: .gitignore  AGENTS.md  package-lock.json  package.json
src/: App.css  App.jsx  styles.css
src-tauri/: Cargo.toml  TODO.md  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/api/commands/: book_commands.rs
src-tauri/src/api/handlers/: reading_progress_handler.rs
src-tauri/src/application/: book.rs
src-tauri/src/application/repository/: annotation_repo.rs  author_repo.rs  book_repo.rs  bookmark_repo.rs
src-tauri/src/application/service/: book_service.rs
src-tauri/src/commands/: account_commands.rs  auth_command.rs  book_commands.rs  library_commands.rs  metadata_commands.rs
src-tauri/src/data/repos/implementors/: annotation_repo.rs  author_repo.rs  book_author_repo.rs  book_repo.rs  bookmark_repo.rs  publisher_repo.rs  reading_progress_repo.rs  user_library_repo.rs  user_repo.rs
src-tauri/src/handlers/: epub_handler.rs
src-tauri/src/infrastructure/file_handlers/: epub_handler.rs  pdf_handler.rs
src-tauri/src/services/: authentication_service.rs  book_service.rs
src-tauri/src/utils/: response.rs
src-tauri/tests/: pdf_handler_tests.rs
src/assets/: StarRate.jsx  Stellaron-Rework-TODO.md  note.txt
src/components/: ActiveDesk.tsx  BookStack.tsx  CollectionCard.tsx  CollectionDetailDrawer.tsx  ContinueRead.jsx  EpubReader.tsx  HomeCollections.tsx  HomeHeader.tsx  ImportModal.tsx  LastRead.jsx  LibraryOverview.tsx  LibraryShelf.tsx  NewCollectionModal.tsx  PdfReader.tsx  QuoteGenerator.jsx  ReadersJournal.tsx  ReadingQueue.tsx  RootSidebar.tsx  SearchLibrary.tsx  SettingsModal.tsx  UnsortedBooks.tsx
src/components/BookComp/: BookAuthor.jsx  BookDetails.jsx  BookHeader.jsx  BookMeta.jsx  BookRelated.jsx  BookSynopsis.jsx  BookToolTip.jsx  ReaderModal.jsx
src/components/Bookdata/: BookCard.jsx  BookHIstory.jsx  BookSlider.jsx  HistoryCard.jsx  Library.jsx
src/components/HeaderComp/: Header.jsx  HeaderRight.jsx
src/components/LibraryComp/: AddFolderButton.jsx  FolderItem.jsx  FolderList.jsx  ImportPopup.jsx
src/components/ui/: BookCard.tsx
src/features/plans/components/: PlanCreatorModal.tsx
src/features/plans/hooks/: useReadingPlans.ts
src/hooks/: useBookCovers.ts  useBookmarks.ts  useBooksWithProgress.ts  useCollections.ts  useEpubParser.ts  useFavorites.ts  useImport.ts  useReaderNavigation.ts  useReaderSettings.ts  useReadingProgress.ts  useTheme.ts
src/layout/: RootLayout.jsx  RootLayout.tsx
src/pages/: BookDetailPage.tsx  BookPage.jsx  BookPage.tsx  CollectionsPage.tsx  HomePage.jsx  HomePage.tsx  LibraryPage.jsx  LibraryPage.tsx  ProfilePage.tsx
src/services/: tauriService.ts
src/types/: collection.ts  context.ts  index.ts  progress.ts
src/ui/: GlassCard.jsx
src/utils/: formatters.ts
