[package]
name = "stellaron"
version = "0.1.0"
description = "A Tauri App"
authors = ["skaarfundgandr"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant, but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "stellaron_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4.41"
diesel-async = { version = "0.7.4", features = ["sqlite", "deadpool"] }
once_cell = "1.21.3"
tokio = { version = "1.48.0", features = ["full"] }
serial_test = "3.2.0"
diesel = { version = "2.3.3", features = ["chrono", "sqlite"] }
dotenvy = "0.15.7"
walkdir = "2.5.0"
async-trait = "0.1.89"
argon2 = { version = "0.5.3", features = ["rand", "std"] }
scraper = "0.25.0"
base64 = "0.22.1"
regex = "1.12.2"
rbook = { version = "0.6.6", features = ["threadsafe"] }
sha2 = "0.10"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-process = "2.3.1"
tauri-plugin-fs = "2.4.4"
diesel_migrations = "2.3.1"
futures = "0.3.31"


# 👇 Force bundled SQLite
[dependencies.libsqlite3-sys]
version = "0.36.0"
features = ["bundled"]

