[package]
name = "stellaron"
version = "0.1.0"
description = "A Tauri App"
authors = ["skaarfundgandr"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "unwind"

[lib]
# The `_lib` suffix may seem redundant, but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "stellaron_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
chrono = "0.4.45"
diesel-async = { version = "0.9.1", features = ["sqlite", "deadpool"] }
once_cell = "1.21.4"
tokio = { version = "1.52.3", features = ["full"] }
diesel = { version = "2.3.10", features = ["chrono", "sqlite"] }
dotenvy = "0.15.7"
walkdir = "2.5.0"
async-trait = "0.1.89"
thiserror = "2"
scraper = "0.27.0"
base64 = "0.22.1"
regex = "1.12.4"
rbook = { version = "0.7.7", features = ["threadsafe"] }
sha2 = "0.10"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-fs = "2.5.1"
diesel_migrations = "2.3.2"
serial_test = "3.5.0"
pdf_oxide = { version = "0.3.61", features = ["rendering"] }


# 👇 Force bundled SQLite
[dependencies.libsqlite3-sys]
version = "0.37.0"
features = ["bundled"]
